<?xml version="1.0"?>
<package>
  <name>rericha_racing</name>
  <version>0.0.0</version>
  <description>The f1tenth_race package
    
  </description>

  <maintainer email="vajnamar@fel.cvut.cz">Martin Vajnar</maintainer>

  <license>GPLv3</license>

  <author email="vajnamar@fel.cvut.cz">Martin Vajnar</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>numpy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>numpy</run_depend>
</package>
